reinit database
